--- a/RazorCameraLibrary/RazorCameraLibrary.csproj
+++ b/RazorCameraLibrary/RazorCameraLibrary.csproj
@@ -1,9 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
+    <PackageId>RazorCameraLibrary</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>yushulx</Authors>
+    <Company>Dynamsoft</Company>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>A Razor Class Library built using the Dynamsoft JavaScript Camera Enhancer SDK,
+      which provides a simple way to integrate camera access into Blazor applications.</Description>
+    <PackageProjectUrl>https://github.com/yushulx/Razor-Camera-Library</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/yushulx/Razor-Camera-Library</RepositoryUrl>
+    <PackageTags>
+      camera;webcam</PackageTags>
+    <PackageReleaseNotes>
+      - Integrated Dynamsoft JavaScript Camera Enhancer SDK.
+    </PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 
@@ -15,4 +32,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 </Project>
