--- a/RazorCameraLibrary/RazorCameraLibrary.csproj
+++ b/RazorCameraLibrary/RazorCameraLibrary.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <PackageId>RazorCameraLibrary</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>yushulx</Authors>
     <Company>Dynamsoft</Company>
     <TargetFramework>net7.0</TargetFramework>
@@ -16,7 +16,7 @@
     <PackageTags>
       camera;webcam</PackageTags>
     <PackageReleaseNotes>
-      - Integrated Dynamsoft JavaScript Camera Enhancer SDK.
+      - Added overlay drawing API.
     </PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
